# ml-videoflextok

./: .gitignore  ACKNOWLEDGEMENTS.md  LICENSE  README.md  diagram.md  generate_latents.py  pyproject.toml  simple.py
notebooks/: videoflextok_inference.ipynb
scripts/: generate_latents.sh  run_notebook.sh  run_simple.sh  simple.sh
videoflextok/: wrappers.py
videoflextok/compressors/: base.py  vidtok.py
videoflextok/flow_matching/: cfg_utils.py  noise_modules.py  pipelines.py  utils.py
videoflextok/model/: __init__.py
videoflextok/model/layers/: attention.py  causalconv.py  drop_path.py  mlp.py  norm.py  transformer_blocks.py
videoflextok/model/postprocessors/: heads.py  seq_unpacking.py
videoflextok/model/preprocessors/: flex_seq_packing.py  linear.py  nullcond.py  patching.py  registers.py  time_embedding.py  token_dropout.py
videoflextok/model/trunks/: transformers.py
videoflextok/model/utils/: dict_ops.py  packed_ops.py  posembs.py  wrappers.py
videoflextok/regularizers/: quantize_fsq.py
videoflextok/resamplers/: video_wrappers.py
videoflextok/utils/: __init__.py  checkpoint.py  demo.py  misc.py  mup_layers.py
videoflextok/vidtok/configs/: vidtok_kl_causal_488_16chn.yaml
videoflextok/vidtok/models/: autoencoder.py
videoflextok/vidtok/modules/: distributions.py  model_3dcausal.py  regularizers.py  util.py
